# lxcops

./: README.md  lxcops.cabal  stack.yaml
examples/lxcops-example/: README.md  lxcops-example.cabal  stack.yaml
examples/lxcops-example/src/: Main.hs
src/System/: LxcOps.hs
src/System/LxcOps/: FreeDsl.hs  Types.hs  Wrapper.hs
test/: BasicSpec.hs
